Bản hoàn thiện để ghép FE